@@ -20,10 +20,12 @@ import java.io.IOException;
 import java.lang.invoke.MethodHandles;
 import java.util.ArrayList;
 import java.util.Collection;
+import java.util.Collections;
 import java.util.Date;
 import java.util.List;
 import java.util.Map;
 import org.apache.lucene.document.Field;
+import org.apache.lucene.document.FloatPoint;
 import org.apache.lucene.document.NumericDocValuesField;
 import org.apache.lucene.document.SortedNumericDocValuesField;
 import org.apache.lucene.document.StoredField;
@@ -35,6 +37,8 @@ import org.apache.lucene.search.IndexOrDocValuesQuery;
 import org.apache.lucene.search.Query;
 import org.apache.lucene.search.SortField;
 import org.apache.lucene.search.SortedNumericSelector;
+import org.apache.lucene.search.SortedNumericSortField;
+import org.apache.lucene.search.TermInSetQuery;
 import org.apache.lucene.search.TermQuery;
 import org.apache.lucene.util.BytesRef;
 import org.apache.lucene.util.BytesRefBuilder;
@@ -56,7 +60,17 @@ import org.slf4j.LoggerFactory;
  * FieldCache} is not supported for {@code PointField}s, so sorting, faceting, etc on these fields
  * require the use of {@code docValues="true"} in the schema.
  */
-public abstract class PointField extends NumericFieldType {
+public abstract class NumericField extends PrimitiveFieldType {
+
+  protected NumberType type;
+
+  /**
+   * @return the type of this field
+   */
+  @Override
+  public NumberType getNumberType() {
+    return type;
+  }
 
   private static final Logger log = LoggerFactory.getLogger(MethodHandles.lookup().lookupClass());
 
@@ -156,33 +170,67 @@ public abstract class PointField extends NumericFieldType {
   }
 
   @Override
-  public Query getSetQuery(QParser parser, SchemaField field, Collection<String> externalVals) {
-    return super.getSetQuery(parser, field, externalVals);
-  }
-
-  @Override
   public Query getFieldQuery(QParser parser, SchemaField field, String externalVal) {
-    if (!field.indexed() && field.hasDocValues()) {
-      // currently implemented as singleton range
-      return getRangeQuery(parser, field, externalVal, externalVal, true, true);
-    } else if (field.indexed() && field.hasDocValues()) {
-      Query indexQuery = getExactQuery(parser, field, externalVal);
-      Query dvQuery = getDocValuesRangeQuery(parser, field, externalVal, externalVal, true, true);
+    if (field.indexed() && field.hasDocValues()) {
+      Query indexQuery = getIndexFieldQuery(parser, field, externalVal);
+      Query dvQuery = getDocValuesFieldQuery(parser, field, externalVal);
       return new IndexOrDocValuesQuery(indexQuery, dvQuery);
+    } else if (field.hasDocValues()) {
+      // currently implemented as singleton range
+      return getDocValuesFieldQuery(parser, field, externalVal);
     } else {
-      return getExactQuery(parser, field, externalVal);
+      return getIndexFieldQuery(parser, field, externalVal);
     }
   }
 
-  final Query getExactQuery(QParser parser, SchemaField field, String externalVal) {
+  final Query getIndexFieldQuery(QParser parser, SchemaField field, String externalVal) {
     if (hasIndexedTerms(field)) {
       BytesRefBuilder br = new BytesRefBuilder();
       readableToIndexed(externalVal, br);
       return new TermQuery(new Term(field.getName(), br));
     } else {
-      return getPointRangeQuery(parser, field, externalVal, externalVal, true, true);
+      return getPointFieldQuery(parser, field, externalVal);
     }
   }
+
+  public abstract Query getPointFieldQuery(QParser parser, SchemaField field, String externalVal);
+
+  public abstract Query getDocValuesFieldQuery(QParser parser, SchemaField field, String externalVal);
+
+  @Override
+  public Query getSetQuery(QParser parser, SchemaField field, Collection<String> externalVals) {
+    assert !externalVals.isEmpty();
+    if (field.indexed() && field.hasDocValues()) {
+      Query pointsQuery = getIndexSetQuery(parser, field, externalVals);
+      Query dvQuery = getDocValuesSetQuery(parser, field, externalVals);
+      return new IndexOrDocValuesQuery(pointsQuery, dvQuery);
+    } else if (field.hasDocValues()) {
+      return getDocValuesSetQuery(parser, field, externalVals);
+    } else if (field.indexed()){
+      return getIndexSetQuery(parser, field, externalVals);
+    } else {
+      return super.getSetQuery(parser, field, externalVals);
+    }
+  }
+
+  final Query getIndexSetQuery(QParser parser, SchemaField field, Collection<String> externalVals) {
+    if (hasIndexedTerms(field)) {
+      List<BytesRef> lst = new ArrayList<>(externalVals.size());
+      BytesRefBuilder br = new BytesRefBuilder();
+      for (String externalVal : externalVals) {
+        readableToIndexed(externalVal, br);
+        lst.add(br.toBytesRef());
+      }
+      return new TermInSetQuery(field.getName(), lst);
+    } else if (field.indexed()) {
+      return getPointSetQuery(parser, field, externalVals);
+    }
+    return null;
+  }
+
+  public abstract Query getPointSetQuery(QParser parser, SchemaField field, Collection<String> externalVals);
+
+  public abstract Query getDocValuesSetQuery(QParser parser, SchemaField field, Collection<String> externalVals);
 
   @Override
   protected Query getSpecializedRangeQuery(
@@ -192,18 +240,26 @@ public abstract class PointField extends NumericFieldType {
       String max,
       boolean minInclusive,
       boolean maxInclusive) {
-    if (!field.indexed() && field.hasDocValues()) {
-      return getDocValuesRangeQuery(parser, field, min, max, minInclusive, maxInclusive);
-    } else if (field.indexed() && field.hasDocValues()) {
+    if (field.indexed() && field.hasDocValues()) {
       Query pointsQuery = getPointRangeQuery(parser, field, min, max, minInclusive, maxInclusive);
       Query dvQuery = getDocValuesRangeQuery(parser, field, min, max, minInclusive, maxInclusive);
       return new IndexOrDocValuesQuery(pointsQuery, dvQuery);
+    } else if (field.hasDocValues()) {
+      return getDocValuesRangeQuery(parser, field, min, max, minInclusive, maxInclusive);
     } else {
       return getPointRangeQuery(parser, field, min, max, minInclusive, maxInclusive);
     }
   }
 
   public abstract Query getPointRangeQuery(
+      QParser parser,
+      SchemaField field,
+      String min,
+      String max,
+      boolean minInclusive,
+      boolean maxInclusive);
+
+  public abstract Query getDocValuesRangeQuery(
       QParser parser,
       SchemaField field,
       String min,
@@ -218,8 +274,7 @@ public abstract class PointField extends NumericFieldType {
 
   @Override
   public String toInternal(String val) {
-    throw new UnsupportedOperationException(
-        "Can't generate internal string in PointField. use PointField.toInternalByteRef");
+    return toInternalByteRef(val).utf8ToString();
   }
 
   public BytesRef toInternalByteRef(String val) {
@@ -278,7 +333,7 @@ public abstract class PointField extends NumericFieldType {
   @Override
   public List<IndexableField> createFields(SchemaField sf, Object value) {
     if (!isFieldUsed(sf)) {
-      return List.of();
+      return Collections.emptyList();
     }
     List<IndexableField> fields = new ArrayList<>(3);
     IndexableField field = null;
@@ -303,28 +358,16 @@ public abstract class PointField extends NumericFieldType {
         numericValue = field.numericValue();
       }
       final long bits;
-      if (!sf.multiValued()) {
-        if (numericValue instanceof Integer || numericValue instanceof Long) {
-          bits = numericValue.longValue();
-        } else if (numericValue instanceof Float) {
-          bits = Float.floatToIntBits(numericValue.floatValue());
-        } else {
-          assert numericValue instanceof Double;
-          bits = Double.doubleToLongBits(numericValue.doubleValue());
-        }
-        fields.add(new NumericDocValuesField(sf.getName(), bits));
+      // MultiValued
+      if (numericValue instanceof Integer || numericValue instanceof Long) {
+        bits = numericValue.longValue();
+      } else if (numericValue instanceof Float) {
+        bits = NumericUtils.floatToSortableInt(numericValue.floatValue());
       } else {
-        // MultiValued
-        if (numericValue instanceof Integer || numericValue instanceof Long) {
-          bits = numericValue.longValue();
-        } else if (numericValue instanceof Float) {
-          bits = NumericUtils.floatToSortableInt(numericValue.floatValue());
-        } else {
-          assert numericValue instanceof Double;
-          bits = NumericUtils.doubleToSortableLong(numericValue.doubleValue());
-        }
-        fields.add(new SortedNumericDocValuesField(sf.getName(), bits));
+        assert numericValue instanceof Double;
+        bits = NumericUtils.doubleToSortableLong(numericValue.doubleValue());
       }
+      fields.add(new SortedNumericDocValuesField(sf.getName(), bits));
     }
     if (sf.stored()) {
       fields.add(getStoredField(sf, value));
